--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
   --breakpoint-lg: 1024px;
   --breakpoint-xl: 1280px;
   --breakpoint-2xl: 1536px;
-  --color-primary: #fd3d57;
+  --color-primary: #14b8a6;
 }
 
 :root {
